--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@vitejs/plugin-react": "^4.3.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.7.3",
