--- a/chatapplication.client/package.json
+++ b/chatapplication.client/package.json
@@ -26,6 +26,11 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "@microsoft/signalr": "^8.0.7",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.7.3",
+    "hamburger-react": "^2.5.2",
+    "react-use": "^17.6.0"
   }
 }
