--- a/chatapplication.client/package.json
+++ b/chatapplication.client/package.json
@@ -5,14 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && CI=false vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.7.4",
+    "hamburger-react": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "7.5.0"
+    "react-router-dom": "7.5.0",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
