--- a/chatapplication.client/nginx.conf
+++ b/chatapplication.client/nginx.conf
@@ -7,8 +7,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-        proxy_pass http://server:5000;
+    location /api/ {
+        proxy_pass http://server;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
