--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -9,11 +9,11 @@ RUN dotnet restore "ChatApplication.Server/ChatApplication.Server.csproj"
 
 COPY ChatApplication.Server/ ./ChatApplication.Server/
 WORKDIR /src/ChatApplication.Server
-RUN dotnet publish -c Release -o /app/publish
+RUN dotnet publish -c Release --self-contained false -o /app/publish
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
 
-EXPOSE 80
+EXPOSE 8080
 ENTRYPOINT ["dotnet", "ChatApplication.Server.dll"]
