--- a/chatapplication.client/nginx.conf
+++ b/chatapplication.client/nginx.conf
@@ -1,18 +1,11 @@
 server {
     listen 80;
     server_name localhost;
+    location /api/ {
+        proxy_pass http://server:8080/;
+    }
     
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://client:3000;
     }
-
-    location /api/ {
-        proxy_pass http://server;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-
-    
 }
