--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile.server
     ports:
-      - "5000:80"
+      - "3001:8080"
     depends_on:
       - db
 
@@ -13,8 +13,16 @@ services:
       context: .
       dockerfile: Dockerfile.client
     ports:
-      - "3000:80"
-
+      - "3000:3000"
+  proxy:
+    build: 
+      context: .
+      dockerfile: Dockerfile.proxy
+    ports: 
+      - "8080:80"
+    depends_on:
+      - client
+      - server
   db:
     image: postgres
     ports:
