--- a/ChatApplication.Server/appsettings.Development.json
+++ b/ChatApplication.Server/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ChatAppContext": "Host=localhost;Port=5432;User Id=postgres;Password=Postgre5!123;Database=chatapp;"
   }
 }
