--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   server:
-    build:
+    build: 
       context: .
       dockerfile: Dockerfile.server
     ports:
-      - "5000:80"
+      - "8080:8080"
     depends_on:
       - db
 
@@ -13,7 +13,7 @@ services:
       context: .
       dockerfile: Dockerfile.client
     ports:
-      - "3000:80"
+      - "3000:3000"
 
   db:
     image: postgres
@@ -21,5 +21,5 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: Postgre5!123
       POSTGRES_DB: chatapp
