--- a/ChatApplication.Server/appsettings.json
+++ b/ChatApplication.Server/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatAppContext": "Host=localhost; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatApplicationDb; Include Error Detail=True;"
+    "ChatAppContext": "Host=db; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatApplicationDb; Include Error Detail=True;"
 
   }
 }
