--- a/ChatApplication.Server/appsettings.Development.json
+++ b/ChatApplication.Server/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChatAppContext": "Host=db; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatApplicationDb; Include Error Detail=True;"
+
   }
 }
