--- a/ChatApplication.Server/ChatApplication.Server.csproj
+++ b/ChatApplication.Server/ChatApplication.Server.csproj
@@ -9,6 +9,8 @@
 
 	<ItemGroup>
 
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
+
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
 			<PrivateAssets>all</PrivateAssets>
