--- a/ChatApplication.Server/appsettings.json
+++ b/ChatApplication.Server/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "ChatAppContext": "Host=db; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatApplicationDb; Include Error Detail=True;"
 
+  },
+  "Jwt": {
+    "Key": "ThisIsMySuperDuperDuperDuperSecretKey",
+    "Issuer": "localhost",
+    "Audience": "localhost"
   }
 }
