--- a/chatapplication.client/package.json
+++ b/chatapplication.client/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
     "hamburger-react": "^2.5.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "7.5.0",
