--- a/ChatApplication.Server/appsettings.json
+++ b/ChatApplication.Server/appsettings.json
@@ -1,8 +1,9 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -15,4 +16,4 @@
     "Issuer": "localhost",
     "Audience": "localhost"
   }
-}
+ }
