--- a/chatapplication.client/nginx.conf
+++ b/chatapplication.client/nginx.conf
@@ -1,11 +1,41 @@
 server {
     listen 80;
     server_name localhost;
+
+    # API routing (normal HTTP requests)
     location /api/ {
         proxy_pass http://server:8080/;
+
+        # WebSocket & header support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
-    
+
+    # SignalR ChatHub (explicitly routed)
+    location /chathub {
+        proxy_pass http://server:8080/chathub;
+
+        # WebSocket headers
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 600s;
+    }
+
+    # Frontend SPA
     location / {
         proxy_pass http://client:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 }
