--- a/chatapplication.client/nginx.conf
+++ b/chatapplication.client/nginx.conf
@@ -4,7 +4,7 @@ server {
 
     # API routing (normal HTTP requests)
     location /api/ {
-        proxy_pass http://server:8080/;
+        proxy_pass http://server:8080;
 
         # WebSocket & header support
         proxy_http_version 1.1;
@@ -33,9 +33,7 @@ server {
 
     # Frontend SPA
     location / {
-        proxy_pass http://client:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+      root /usr/share/nginx/html;
+        try_files $uri /index.html;
     }
 }
