--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,7 +1,32 @@
-FROM node:20-alpine
+
+
+# Use the official Node.js runtime as the base image
+FROM node:20 AS build
+
+# Set the working directory in the container
 WORKDIR /app
-COPY chatapplication.client/package.json .
-RUN yarn install
+
+# Copy package.json and package-lock.json to the working directory
 COPY chatapplication.client ./
-EXPOSE 3000
-CMD [ "yarn", "dev" ]
+
+# Install dependencies
+RUN npm install
+
+# Build the React app for production
+RUN npm run build
+
+# Use Nginx as the production server
+FROM nginx:alpine
+
+# Copy nginx.conf
+COPY chatapplication.client/nginx.conf /etc/nginx/conf.d/default.conf
+
+
+# Copy the built React app to Nginx's web server directory
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Expose port 80 for the Nginx server
+EXPOSE 80
+
+# Start Nginx when the container runs
+CMD ["nginx", "-g", "daemon off;"]
