--- a/ChatApplication.Server/appsettings.Development.json
+++ b/ChatApplication.Server/appsettings.Development.json
@@ -8,7 +8,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatAppContext": "Host=db; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatApplicationDb; Include Error Detail=True;"
+    "ChatAppContext": "Host=localhost; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatApplicationDb; Include Error Detail=True;"
 
+  },
+  "Jwt": {
+    "Key": "ThisIsMySuperDuperDuperDuperSecretKey",
+    "Issuer": "localhost",
+    "Audience": "localhost"
   }
 }
+
