--- a/ChatApplication.Server/appsettings.Development.json
+++ b/ChatApplication.Server/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatAppContext": "Host=localhost; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatApplicationDb; Include Error Detail=True;"
+    "ChatAppContext": "Host=localhost; Port=5432; User Id=postgres; Password=mysecretpassword; Database=ChatDb; Include Error Detail=True;"
 
   },
   "Jwt": {
