--- a/chatapplication.client/package.json
+++ b/chatapplication.client/package.json
@@ -19,6 +19,7 @@
     "nginx": "^1.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-favicon": "^2.0.7",
     "react-router-dom": "^7.5.2",
     "react-use": "^17.6.0"
   },
