--- a/chatapplication.client/package.json
+++ b/chatapplication.client/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-favicon": "^2.0.7",
+    "react-idle-timer": "^5.7.2",
     "react-router-dom": "^7.5.2",
     "react-use": "^17.6.0"
   },
